--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,7 @@
 title            : MS00AltKlausur
 instructors      :
- - brunner.da@gmail.com
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
+ - daniel.brunner@hhu.de
+description      : Dieser Onlinekurs stellt eine zusätzliche Übungsmöglichkeit für den Umgang mit R. Der Inhalt besteht aus einer aufbereiteten Klausur des WS 15/16.  
 university       : DataCamp
 difficulty_level : 2
 time_needed      : 1 hour
