--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title            : MS00 Interaktives R-Training
-instructors      :
+instructors      : Daniel Brunner
  - daniel.brunner@hhu.de
 description      : Dieser Onlinekurs stellt eine zusätzliche Übungsmöglichkeit für den Umgang mit R dar. 
 university       : Düsseldorf
