--- a/course.yml
+++ b/course.yml
@@ -1,6 +1,6 @@
 title            : MS00 Interaktives R-Training
-instructors      : Daniel Brunner
- - daniel.brunner@hhu.de
+instructors      : 
+ - brunner.da@gmail.com
 description      : Dieser Onlinekurs stellt eine zusätzliche Übungsmöglichkeit für den Umgang mit R dar. 
 university       : Düsseldorf
 difficulty_level : 2
