--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title            : MS00 Interaktives R-Training
+title            : MS00: Interaktives R-Training
 instructors      : 
  - brunner.da@gmail.com
 description      : Dieser Onlinekurs stellt eine zusätzliche Übungsmöglichkeit für den Umgang mit R dar. 
