--- a/course.yml
+++ b/course.yml
@@ -2,6 +2,6 @@ title            : MS00 Interaktives R-Training
 instructors      : 
  - brunner.da@gmail.com
 description      : Dieser Onlinekurs stellt eine zusätzliche Übungsmöglichkeit für den Umgang mit R dar. 
-university       : Düsseldorf
+university       : HHU Düsseldorf
 difficulty_level : 2
 time_needed      : 2 hour
